# Dronetrone_RTS

./: .gitignore  Dronetrone_RTS.sln  Dronetrone_RTS.uproject  README.md
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: RTSTemplateLevel.umap
Content/Levels/: RTSTemplateLevel.umap  RTSTemplateLevel_HLOD0_Instancing.uasset  TestLevel_0.umap  TestLevel_0_HLOD0_Instancing.uasset
Content/Materials/: M_SelectionOwn.uasset
Content/Meshes/: BaseMaterial.uasset  D-21-dark.uasset  D-21-dark1.uasset  Material.uasset  Material_001.uasset  ThreadMaterial.uasset  UGV_Platform1.uasset  UGV_PlatformSnow1.uasset  UGV_Platform_Base_Color.uasset  UGV_Platform_Base_Normal.uasset  UGV_Platform_Base_Roughness.uasset  UGV_Platform_Color.uasset  UGV_Platform_Color_ncl1_1.uasset  UGV_Platform_Normal.uasset  UGV_Platform_Roughness.uasset  UGV_Platform_icon.uasset
Content/RTS/: BP_Platform.uasset
Docs/: GDD.md
Docs/Scenario/: Main.md
SimCore/: CMakeLists.txt
SimCore/cli/: cli_main.cpp
SimCore/include/core/: entity.h  world.h
SimCore/include/core/buildings/: building.h  hq.h
SimCore/include/core/components/: component.h  health.h
SimCore/include/core/units/: ugv.h  unit.h
SimCore/include/simcore/: simcore_api.h  simcore_types.h
SimCore/src/api/: simcore_api.cpp  simcore_types.cpp
SimCore/src/core/: entity.cpp  world.cpp
SimCore/src/core/buildings/: building.cpp  hq.cpp
SimCore/src/core/components/: component.cpp  health.cpp
SimCore/src/core/units/: ugv.cpp  unit.cpp
Source/: Dronetrone_RTS.Target.cs  Dronetrone_RTSEditor.Target.cs
(+573 files in other folders)
